fix: layout overlapping styling issue

--- a/src/components/pages/AdminBoardDetail/AdminBoardDetail.scss
+++ b/src/components/pages/AdminBoardDetail/AdminBoardDetail.scss
@@ -40,6 +40,7 @@
       }
       .service-app-content {
         padding: 68px 0 68px 56px;
+        flex: 1;
       }
     }
     .service-documents {
